--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^18.2.0"
   },
   "prisma": {
-    "seed": "ts-node -p tsconfig.node.json prisma/seed.ts"
+    "seed": "ts-node --project tsconfig.node.json prisma/seed.ts"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
