--- a/package.json
+++ b/package.json
@@ -3,23 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier src/ --write"
+    "rsc:dev": "pnpm --filter rsc-demo run dev",
+    "format": "prettier rsc-demo/src/ db/ --write"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@prisma/client": "5.9.1",
     "classnames": "^2.5.1",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  },
-  "prisma": {
-    "seed": "ts-node --project tsconfig.node.json prisma/seed.ts"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
